add conference program

--- a/contents/program.mdx
+++ b/contents/program.mdx
@@ -1,1 +1,48 @@
-coming soon
+# Sciwork Conference 2024
+
+Welcome to the **Sciwork Conference 2024**! Join us for an exciting day of training, and collaboration opportunities with experts and enthusiasts from the tech community.
+
+---
+
+## Schedule
+
+| Time          | Session for Talks              | Session for DUTC Training | Session for Sprint Booths |
+|---------------|--------------------------------|---------------------------|---------------------------|
+| 9:30-10:00    | Check-in                      |                           |                           |
+| 10:00-10:20   | Opening (20 min)              |                           |                           |
+| 10:20-10:30   | Break (10 min)                |                           |                           |
+| 10:30-10:40   | Introduction: cyntx (V) (10 min) | Training (2 hr)           | N/A                       |
+| 10:40-10:45   | Break (5 min)                 |                           |                           |
+| 10:45-10:55   | Introduction: modmesh (V) (10 min) |                           |                           |
+| 10:55-11:00   | Break (5 min)                 |                           |                           |
+| 11:00-11:10   | Introduction: swprotal (V) (10 min) |                           |                           |
+| 11:10-11:20   | Break (10 min)                |                           |                           |
+| 11:25-11:30   | Introduction: Altlas (V) (10 min) |                           |                           |
+| 11:30-11:35   | Break (5 min)                 |                           |                           |
+| 11:35-11:45   | Introduction: utensor (V) (10 min) |                           |                           |
+| 11:45-11:50   | Break (5 min)                 |                           |                           |
+| 11:50-12:00   | Introduction: Pydoc-zhtw (V) (10 min) |                           |                           |
+| 12:00-13:30   | Lunch (90 min)                |                           |                           |
+| 13:30-15:00   | N/A                           | Training (1.5 hr)         | Sprint Booths (1.5 hr)    |
+| 15:00-16:00   | Tea Break (60 min)            |                           |                           |
+| 16:00-17:00   | N/A                           | Training (1.0 hr)         | Sprint Booths (1.0 hr)    |
+| 17:00-20:00   | Reception                     |                           |                           |
+
+---
+
+## Why Attend?
+
+- **Hands-On Training**: Participate in DUTC training sessions led by industry experts.  
+- **Collaborative Sprint Booths**: Engage in open-source sprint projects and connect with like-minded developers.  
+- **Networking Opportunities**: Meet fellow enthusiasts and professionals during breaks and the reception.
+
+---
+
+## Registration
+
+Spots are limited!  
+[Click here to register now on KKTIX](https://sciwork.kktix.cc/events/sciwork-conference-20241214-ntu) and secure your place at the Sciwork Conference 2024.
+
+---
+
+We can't wait to see you there! 🚀
